--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -1,7 +1,12 @@
 <div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <app-point-input></app-point-input>
-        </div>
+  <div class="row">
+    <div class="col-md-12">
+      <app-point-input></app-point-input>
     </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <app-point-list></app-point-list>
+    </div>
+  </div>
 </div>
