--- a/src/app/home/dashboard/point-list/point-list.component.html
+++ b/src/app/home/dashboard/point-list/point-list.component.html
@@ -43,10 +43,12 @@
 
         </ng-container>
 
-
         <ng-container matColumnDef="expandedElement">
-          <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+          <td mat-cell *matCellDef="let element"
+              [attr.colspan]="displayedColumns.length"
+          >
             <div [@detailExpand]="element == (expandedElement$ | async) ? 'expanded' : 'collapsed'">
+<!--              <ng-container *ngTemplateOutlet="ipAddressForm; context: {id: (expandedElement$ | async)?._id, formGroup:ipAddressEditForm}"></ng-container>-->
             </div>
           </td>
         </ng-container>
@@ -56,7 +58,7 @@
             [class.example-expanded-row]="(expandedElement$ | async) === element"
             (click)="expand(element)"
         ></tr>
-        <tr mat-row *matRowDef="let element; columns: ['expandedElement']" class="example-detail-row"></tr>
+        <tr mat-row *matRowDef="let element; columns: ['expandedElement']" class="expanded-row"></tr>
 
       </table>
       <mat-paginator
