--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -9,4 +9,9 @@
       <app-point-list></app-point-list>
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-12">
+      <app-location-search></app-location-search>
+    </div>
+  </div>
 </div>
