Displaying the points ont the map

--- a/src/app/home/main-map/main-map.component.html
+++ b/src/app/home/main-map/main-map.component.html
@@ -1,7 +1,8 @@
-<div style="padding:1vh; position: sticky; top: 0">
+<div style="padding:1vh; position: sticky; top: 0" *ngIf="markers$ | async as markers">
   <div style="height: 98vh; padding:1vh; position: sticky"
        leaflet
        (leafletClick)="onMapClick($event)"
+       [leafletLayers]="markers"
        [leafletOptions]="options">
   </div>
 </div>
