--- a/src/app/home/main-map/main-map.component.html
+++ b/src/app/home/main-map/main-map.component.html
@@ -1,10 +1,10 @@
 <div style="padding:1vh; position: sticky; top: 0" *ngIf="markers$ | async as markers">
-  <div style="height: 98vh; padding:1vh; position: sticky"
-       leaflet
-       (leafletClick)="onMapClick($event)"
-       [leafletLayers]="markers"
-       [leafletOptions]="options">
-  </div>
+  <ng-container *ngIf="mapRoutes$ | async as routes">
+    <div style="height: 98vh; padding:1vh; position: sticky"
+         leaflet
+         (leafletClick)="onMapClick($event)"
+         [leafletLayers]="markers.concat(routes)"
+         [leafletOptions]="options">
+    </div>
+  </ng-container>
 </div>
-
-
