--- a/src/app/home/dashboard/locations-list/locations-list.component.html
+++ b/src/app/home/dashboard/locations-list/locations-list.component.html
@@ -1,1 +1,16 @@
-<p>locations-list works!</p>
+<mat-chip-listbox aria-label="Dog selection">
+  <mat-chip
+    *ngFor="let location of (pickedLocations$ | async)" color="accent"
+    (removed)="removedLocation$.next(location)">
+
+    <div class="chip-content">
+      {{location.description }}
+    </div>
+
+    <button matChipRemove>
+      <mat-icon>cancel</mat-icon>
+    </button>
+  </mat-chip>
+
+</mat-chip-listbox>
+
