--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,8 @@ body {
 #toast-container .ngx-toastr {
   box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
+
+
+.cdk-overlay-container{
+  z-index: 1002 !important;
+}
