--- a/src/app/home/dashboard/locations-search/locations-search.component.html
+++ b/src/app/home/dashboard/locations-search/locations-search.component.html
@@ -1,5 +1,5 @@
 <mat-form-field class=locations-autocomplete *ngIf="locations$ | async as locations">
-  <mat-label>Lokalizacja</mat-label>
+  <mat-label>Wyszukaj lokalizację</mat-label>
   <input matInput
          aria-label="State"
          [matAutocomplete]="auto"
