--- a/src/app/home/dashboard/locations-search/locations-search.component.html
+++ b/src/app/home/dashboard/locations-search/locations-search.component.html
@@ -10,11 +10,8 @@
   </button>
   <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn.bind(this,locations)">
     <mat-option *ngFor="let location of locations" [value]="location">
-      <span style="{
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-      }">{{location.description}}</span> |
+      <p class="mb-0 main_text">{{location.structured_formatting.main_text}}</p>
+      <p class="mb-1 secondary_text">{{location.structured_formatting.secondary_text}}</p>
     </mat-option>
   </mat-autocomplete>
 
