--- a/src/app/home/dashboard/locations-search/locations-search.component.scss
+++ b/src/app/home/dashboard/locations-search/locations-search.component.scss
@@ -1,3 +1,16 @@
-.locations-autocomplete{
-  min-width: 400px;
+.locations-autocomplete {
+  width: 100%;
+
+
+}
+
+.main_text {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.secondary_text {
+  opacity: 0.5 !important;
+  font-size: 0.7rem;
 }
