added submit button

--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -10,5 +10,8 @@
     <app-location-search></app-location-search>
     <app-locations-list></app-locations-list>
 
+
+    <button class="mt-3" mat-raised-button color="primary">{{'Optymalizuj' | uppercase}} </button>
+
   </mat-expansion-panel>
 </mat-accordion>
