--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,3 +11,8 @@ body {
 .cdk-overlay-container{
   z-index: 1002 !important;
 }
+
+.secondary_text {
+  opacity: 0.5 !important;
+  font-size: 0.7rem;
+}
