--- a/src/app/home/dashboard/dashboard.component.scss
+++ b/src/app/home/dashboard/dashboard.component.scss
@@ -1,3 +1,13 @@
 mat-expansion-panel {
   width: 700px;
+  position: relative;
+
+  ::ng-deep .mat-expansion-panel-body {
+    padding: 0 !important;
+  }
+}
+
+
+form {
+  position: relative;
 }
