--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,11 +8,23 @@ body {
 }
 
 
-.cdk-overlay-container{
+.cdk-overlay-container {
   z-index: 1002 !important;
 }
 
 .secondary_text {
   opacity: 0.5 !important;
   font-size: 0.7rem;
+}
+
+
+.progress-spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.1);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
 }
