show description in mat-chip

--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -13,7 +13,7 @@
       </div>
 
 
-      <section class="p-3">
+      <section class="form-content">
         <app-location-search></app-location-search>
         <app-locations-list></app-locations-list>
 
