--- a/src/app/home/dashboard/locations-list/locations-list.component.html
+++ b/src/app/home/dashboard/locations-list/locations-list.component.html
@@ -10,7 +10,8 @@
       (removed)="removedLocation$.next(location)">
 
       <div class="chip-content">
-        {{location.description }}
+        <p class="mb-0">{{location.structured_formatting.main_text }}</p>
+        <p class="mb-1 secondary_text">{{location.structured_formatting.secondary_text }}</p>
       </div>
 
       <button matChipRemove>
