Locations types picker

--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -14,6 +14,7 @@
 
 
       <section class="form-content">
+        <app-locations-types></app-locations-types>
         <app-location-search></app-location-search>
         <app-locations-list></app-locations-list>
 
