--- a/src/app/home/dashboard/locations-types/locations-types.component.html
+++ b/src/app/home/dashboard/locations-types/locations-types.component.html
@@ -1,4 +1,6 @@
+<p>Wybierz typy wśród których chcesz wyszukać (max 5): </p>
 <mat-chip-listbox
+  class="pb-3"
   [(ngModel)]="selected"
   (ngModelChange)="changed()" aria-label="Fish selection" [multiple]="true">
   <mat-chip-option
