--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -8,4 +8,11 @@
     top: 10px;
     right: 10px;
   }
+
+  .summary-container {
+    position: absolute;
+    z-index: 1001;
+    top: 10px;
+    right: 750px;
+  }
 }
